working display of users in report

--- a/src/app/reports-permissions/reports-permissions.component.html
+++ b/src/app/reports-permissions/reports-permissions.component.html
@@ -63,7 +63,7 @@
             mat-raised-button
             color="primary"
             class="permissions-button"
-            (click)="openPermissionsDialog(element)"
+            (click)="openPermissionsDialog()"
           >
             <mat-icon>lock_open</mat-icon>
             <!-- This is a Material icon for permissions -->
