--- a/src/app/reports-permissions/permissions-dialog-new/permissions-dialog-new.component.html
+++ b/src/app/reports-permissions/permissions-dialog-new/permissions-dialog-new.component.html
@@ -1,30 +1,35 @@
 <div class="body" dir="rtl">
   <mat-dialog-content>
-
     <mat-tab-group animationDuration="0ms">
-     >
+      >
 
-      
-      
       <mat-tab label="עדכון מחלקה ">
         <div class="fields-container2">
           <form dir="rtl">
-          
             <div>
-                 <!-- Department Dual-Listbox -->
-                 <dual-list
-                 [source]="users"
-                 key="display"
-                 display="display"
-                 [(destination)]="selectedUsers"
-                 height="300px"
-                 [format]="format"
-               ></dual-list>
-
+              <input
+                type="text"
+                placeholder="חפש..."
+                #searchInput
+                (input)="filterUsers(searchInput.value)"
+              />
+            </div>
+            <div>
+              <!-- Department Dual-Listbox -->
+              <dual-list
+                [source]="filteredUsers"
+                key="display"
+                display="display"
+                [(destination)]="selectedUsers"
+                height="300px"
+                [format]="format"
+              ></dual-list>
             </div>
 
             <div class="dialog-actions">
-              <button mat-raised-button color="primary" (click)="updateUsers()">עדכון</button>
+              <button mat-raised-button color="primary" (click)="updateUsers()">
+                עדכון
+              </button>
 
               <button mat-raised-button color="warn" (click)="closeDialog()">
                 ביטול
