--- a/src/app/reports-permissions/permissions-dialog-new/permissions-dialog-new.component.scss
+++ b/src/app/reports-permissions/permissions-dialog-new/permissions-dialog-new.component.scss
@@ -94,4 +94,16 @@
     margin-bottom: 5px; /* Add space between items */
   }
   
- 
+  input[type="text"] {
+    padding: 8px;
+    margin: 10px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  input[type="text"]:focus {
+    border-color: #66afe9;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  }
