--- a/src/app/reports-permissions/reports-permissions.component.html
+++ b/src/app/reports-permissions/reports-permissions.component.html
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <div class="nine">
   <h1>{{ titleUnit }}<span></span></h1>
 </div>
@@ -71,6 +73,21 @@
           </button>
         </td>
       </ng-container>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef>עדכון</th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-raised-button
+            color="primary"
+            class="permissions-button"
+            (click)="openUpdateDialog(element)"
+          >
+            <mat-icon>edit</mat-icon>
+            <!-- This is a Material icon for permissions -->
+            עריכת הדוח
+          </button>
+        </td>
+      </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
@@ -81,7 +98,9 @@
     showFirstLastButtons
   ></mat-paginator>
 </div>
-
+<button mat-fab color="primary" (click)="openAddNewDialog()">
+  <mat-icon>add</mat-icon>
+</button>
 <!-- <div class="body" dir="rtl">
     <div class="department one">
       <h1>מחלקה 1</h1>
