--- a/src/app/reports-permissions/update-report/update-report.component.html
+++ b/src/app/reports-permissions/update-report/update-report.component.html
@@ -29,10 +29,11 @@
       <button
         mat-raised-button
         class="update-button" 
+        color="primary"
         [disabled]="!updateForm.valid"
         (click)="onSubmit()"
       >
-        Update <!-- Changed button text -->
+        Update 
       </button>
     </div>
   </form>
