--- a/src/app/reports-permissions/add-report/add-report.component.html
+++ b/src/app/reports-permissions/add-report/add-report.component.html
@@ -3,7 +3,9 @@
   rel="stylesheet"
 />
 
-<h2 mat-dialog-title>Add New Report Link</h2>
+<div class="nine">
+  <h2>  הוספת דוח חדש</h2>
+</div>
 <mat-dialog-content dir="rtl">
   <form [formGroup]="newRowForm"  class="custom-form">
     <mat-form-field>
