--- a/src/app/reports-permissions/add-report/add-report.component.scss
+++ b/src/app/reports-permissions/add-report/add-report.component.scss
@@ -43,4 +43,12 @@ mat-form-field {
     background-color: #F44336; // Red color for cancel button
     color: white;
   }
-  
+  .nine h2 {
+    text-align: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: rgb(54, 10, 214);
+    letter-spacing: 1px;
+    font-family: "Playfair Display", serif;
+    font-weight: 400;
+  }
