--- a/src/app/reports-permissions/permissions-dialog-new/permissions-dialog-new.component.scss
+++ b/src/app/reports-permissions/permissions-dialog-new/permissions-dialog-new.component.scss
@@ -107,3 +107,13 @@
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
   }
+
+  .nine h2 {
+    text-align: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: rgb(54, 10, 214);
+    letter-spacing: 1px;
+    font-family: "Playfair Display", serif;
+    font-weight: 400;
+  }
