--- a/src/app/reports-permissions/update-report/update-report.component.scss
+++ b/src/app/reports-permissions/update-report/update-report.component.scss
@@ -34,7 +34,7 @@ mat-form-field {
   }
   
   // Specific styles for buttons
-  .add-button {
+  .update-button {
     background-color: #4CAF50; // Green color for add button
     color: white;
   }
@@ -43,4 +43,42 @@ mat-form-field {
     background-color: #F44336; // Red color for cancel button
     color: white;
   }
+  .nine h2 {
+    text-align: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: rgb(54, 10, 214);
+    letter-spacing: 1px;
+    font-family: "Playfair Display", serif;
+    font-weight: 400;
+  }
+  // .nine h2 span {
+  //   margin-top: 5px;
+  //   font-size: 15px;
+  //   color: rgb(159, 52, 235);
+  //   word-spacing: 1px;
+  //   font-weight: normal;
+  //   letter-spacing: 2px;
+  //   text-transform: uppercase;
+  //   font-family: "Raleway", sans-serif;
+  //   font-weight: 500;
   
+  //   display: grid;
+  //   grid-template-columns: 1fr max-content 1fr;
+  //   grid-template-rows: 27px 0;
+  //   grid-gap: 20px;
+  //   align-items: center;
+  // }
+  
+  // .nine h2 span:after,
+  // .nine h2 span:before {
+  //   content: " ";
+  //   display: block;
+  //   // border-bottom: 1px solid rgb(60, 15, 223);
+  //   // border-top: 1px solid rgb(60, 15, 223);
+  //   //height: 5px;
+  //   //background-color: rgb(187, 215, 254);
+  // }
+  // .bold-header {
+  //   font-weight: bold;
+  // }
