--- a/src/app/main-page-reports/main-page-reports.component.html
+++ b/src/app/main-page-reports/main-page-reports.component.html
@@ -16,24 +16,30 @@
       <mat-label class="filters" style="color: blue">חיפוש</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="חיפוש" />
     </mat-form-field>
+
+  
   </div>
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- ID Column -->
-    <ng-container matColumnDef="reportID">
+    <ng-container matColumnDef="Rowid">
       <th mat-header-cell *matHeaderCellDef>מספר דוח</th>
-      <td mat-cell *matCellDef="let element">{{ element.reportID }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.rowid }}</td>
     </ng-container>
-    <ng-container matColumnDef="reportName">
+    <ng-container matColumnDef="LinkAdress">
+      <th mat-header-cell *matHeaderCellDef>מספר דוח</th>
+      <td mat-cell *matCellDef="let element">{{ element.linkAdress }}</td>
+    </ng-container>
+    <ng-container matColumnDef="LinkDescription">
       <th mat-header-cell *matHeaderCellDef>שם הדוח</th>
-      <td mat-cell *matCellDef="let element">{{ element.reportName }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.linkDescription }}</td>
     </ng-container>
-    <ng-container matColumnDef="departmentName">
+    <ng-container matColumnDef="LinkStatus">
       <th mat-header-cell *matHeaderCellDef>שם המחלקה</th>
-      <td mat-cell *matCellDef="let element">{{ element.departmentName }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.linkStatus }}</td>
     </ng-container>
-    <ng-container matColumnDef="info">
+    <ng-container matColumnDef="ReportName">
       <th mat-header-cell *matHeaderCellDef>מידע</th>
-      <td mat-cell *matCellDef="let element">{{ element.info }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.reportName }}</td>
     </ng-container>
     <!-- <ng-container matColumnDef="linkToPage">
       <th mat-header-cell *matHeaderCellDef>קישור לדף</th>
