--- a/src/app/reports-permissions/reports-permissions.component.html
+++ b/src/app/reports-permissions/reports-permissions.component.html
@@ -29,11 +29,11 @@
     </ng-container>
 
     <ng-container matColumnDef="linkDescription">
-      <th mat-header-cell *matHeaderCellDef>מידע</th>
+      <th mat-header-cell *matHeaderCellDef>פירוט</th>
       <td mat-cell *matCellDef="let element">{{ element.linkDescription }}</td>
     </ng-container>
     <ng-container matColumnDef="linkAdress">
-      <th mat-header-cell *matHeaderCellDef>שם המחלקה</th>
+      <th mat-header-cell *matHeaderCellDef>נתיב </th>
       <td mat-cell *matCellDef="let element">{{ element.linkAdress }}</td>
     </ng-container>
     <!-- <ng-container matColumnDef="linkToPage">
