--- a/src/app/reports-permissions/update-report/update-report.component.html
+++ b/src/app/reports-permissions/update-report/update-report.component.html
@@ -27,7 +27,7 @@
     </mat-form-field>
 
     <div class="form-actions">
-      <button mat-button class="cancel-button" (click)="onNoClick()">Cancel</button>
+      <button mat-button class="cancel-button" (click)="onNoClick()">ביטול</button>
       <button
         mat-raised-button
         class="update-button" 
@@ -35,7 +35,7 @@
         [disabled]="!updateForm.valid"
         (click)="onSubmit()"
       >
-        Update 
+        עדכון 
       </button>
     </div>
   </form>
