--- a/src/app/reports-permissions/reports-permissions.component.html
+++ b/src/app/reports-permissions/reports-permissions.component.html
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <div class="nine">
-  <h1>{{ titleUnit }}<span></span></h1>
+  <!-- <h1>{{ titleUnit }}<span></span></h1> -->
 </div>
 
 <div class="mat-elevation-z8" dir="rtl">
@@ -19,10 +19,10 @@
   </div>
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- ID Column -->
-    <ng-container matColumnDef="rowid">
+    <!-- <ng-container matColumnDef="rowid">
       <th mat-header-cell *matHeaderCellDef>מספר דוח</th>
       <td mat-cell *matCellDef="let element">{{ element.rowid }}</td>
-    </ng-container>
+    </ng-container> -->
     <ng-container matColumnDef="reportName">
       <th mat-header-cell *matHeaderCellDef>שם הדוח</th>
       <td mat-cell *matCellDef="let element">{{ element.reportName }}</td>
@@ -32,10 +32,10 @@
       <th mat-header-cell *matHeaderCellDef>פירוט</th>
       <td mat-cell *matCellDef="let element">{{ element.linkDescription }}</td>
     </ng-container>
-    <ng-container matColumnDef="linkAdress">
+    <!-- <ng-container matColumnDef="linkAdress">
       <th mat-header-cell *matHeaderCellDef>נתיב </th>
       <td mat-cell *matCellDef="let element">{{ element.linkAdress }}</td>
-    </ng-container>
+    </ng-container> -->
     <!-- <ng-container matColumnDef="linkToPage">
         <th mat-header-cell *matHeaderCellDef>קישור לדף</th>
         <td mat-cell *matCellDef="let element">{{ element.linkToPage }}</td>
