--- a/src/app/reports-permissions/reports-permissions.component.scss
+++ b/src/app/reports-permissions/reports-permissions.component.scss
@@ -140,3 +140,8 @@
     font-weight: bold;
   }
 
+  .top-right-container {
+    display: flex;
+    justify-content: flex-end; /* Aligns horizontally to the right */
+    padding: 10px; /* Add some padding */
+  }
