--- a/src/app/main-page-reports/main-page-reports.component.html
+++ b/src/app/main-page-reports/main-page-reports.component.html
@@ -19,22 +19,22 @@
 
   
   </div>
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table mat-table [dataSource]="dataSource" matSort >
     <!-- ID Column -->
-    <ng-container matColumnDef="Rowid">
-      <th mat-header-cell *matHeaderCellDef>מספר דוח </th>
+    <ng-container matColumnDef="Rowid" >
+      <th mat-header-cell *matHeaderCellDef class="bold-header">מספר דוח </th>
       <td mat-cell *matCellDef="let element">{{ element.rowid }}</td>
     </ng-container>
     <ng-container matColumnDef="ReportName">
-      <th mat-header-cell *matHeaderCellDef>שם הדוח</th>
+      <th mat-header-cell *matHeaderCellDef class="bold-header">שם הדוח</th>
       <td mat-cell *matCellDef="let element">{{ element.reportName }}</td>
     </ng-container>
     <ng-container matColumnDef="LinkAdress">
-      <th mat-header-cell *matHeaderCellDef>שם הדוח באנגלית </th>
+      <th mat-header-cell *matHeaderCellDef class="bold-header">שם הדוח באנגלית </th>
       <td mat-cell *matCellDef="let element">{{ element.linkAdress }}</td>
     </ng-container>
     <ng-container matColumnDef="LinkDescription">
-      <th mat-header-cell *matHeaderCellDef> תיאור הדוח</th>
+      <th mat-header-cell *matHeaderCellDef class="bold-header"> תיאור הדוח</th>
       <td mat-cell *matCellDef="let element">{{ element.linkDescription }}</td>
     </ng-container>
     <ng-container matColumnDef="LinkStatus">
@@ -75,40 +75,3 @@
   ></mat-paginator>
 </div>
 
-<!-- <div class="body" dir="rtl">
-  <div class="department one">
-    <h1>מחלקה 1</h1>
-    <div class="card-container">
-      <div class="card" *ngFor="let card of cards">
-        <mat-card>
-          <mat-card-title class="title1">{{ card.title }}</mat-card-title>
-          <mat-card-subtitle class="title1"
-            >מבקש הדוח: {{ card.requester }}</mat-card-subtitle
-          >
-          <mat-card-content>{{ card.content }}</mat-card-content>
-          <button mat-button class="button" [routerLink]="card.link">
-            להרצת הדוח
-          </button>
-        </mat-card>
-      </div>
-    </div>
-  </div>
-
-  <div class="department two">
-    <h1>מחלקה 2</h1>
-    <div class="card-container">
-      <div class="card" *ngFor="let mosh of moshe">
-        <mat-card>
-          <mat-card-title class="title1">{{ mosh.title }}</mat-card-title>
-          <mat-card-subtitle class="title1"
-            >מבקש הדוח: {{ mosh.requester }}</mat-card-subtitle
-          >
-          <mat-card-content>{{ mosh.content }}</mat-card-content>
-          <button mat-button class="button" [routerLink]="mosh.link">
-            להרצת הדוח
-          </button>
-        </mat-card>
-      </div>
-    </div>
-  </div>
-</div> -->
