--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -37,4 +37,33 @@
             <div class="card-value" [ngClass]="{'card-value-blue': userData.on_hold == '0', 'card-value-red': userData.on_hold != '0'}">{{ userData.on_hold }}</div>
         </div>
     </div>
+    <mat-table
+    
+    [dataSource]="matTableDataSource"
+    matSort
+    dir="rtl"
+    class="mat-elevation-z8"
+  >
+    <!-- Loop through columns to define each column in the table -->
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel(column) }}
+        <!-- Use the function to get display-friendly labels -->
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
+    </ng-container>
+
+    <!-- Define the header row -->
+    <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+    <!-- Define the data row -->
+    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+  </mat-table>
+
+  <!-- Define the paginator with page size options -->
+  <mat-paginator
+    [length]="matTableDataSource.paginator?.length || 0"
+    [pageIndex]="matTableDataSource.paginator?.pageIndex"
+    [pageSize]="matTableDataSource.paginator?.pageSize"
+    [pageSizeOptions]="[15, 50, 100]"
+  ></mat-paginator>
 </div>
