--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,16 +1,9 @@
 <mat-toolbar color="primary">
+  <div class="welcome-message">Welcome, {{ loginUserName }}</div>
+  <div class="example-spacer">מסך רפרנט קמיליון</div>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
-  <div class="welcome-message">Welcome, {{ loginUserName }}</div>
 </mat-toolbar>
 <div class="dashboard">
 
