--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -10,7 +10,8 @@
 
   <div class="content">
     <div class="tasks-table">
-    
+      <h2 class="table-title">Your Table Title Here</h2>
+
       <mat-table
         [dataSource]="matTableDataSource"
         matSort
@@ -42,6 +43,8 @@
     </div>
     
     <div class="cards">
+      <h2 class="cards-title">Your Cards Section Title Here</h2>
+
       <!-- Flatten out the structure to have all cards directly within .cards -->
       <!-- First row of cards -->
       <div class="card">
